fix: main overflow on mobile

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -14,6 +14,10 @@ locator-layout {
       'main aside';
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto 1fr;
+
+    &::part(main) {
+      overflow-y: auto;
+    }
   }
 
   &::part(header) {
@@ -26,7 +30,6 @@ locator-layout {
 
   &::part(main) {
     grid-area: main;
-    overflow: auto;
   }
 
   &::part(aside) {
